# FCFS

./: .gitmodules  README.md
fcfs/: .gitignore  CMakeLists.txt  bugs.txt  cache.h  dev.h  doxy.conf  fcfs.c  fcfs.h  fcfs_cache.c  fcfs_cache.h  fcfs_mount.c  fcfs_mount.h  fcfs_opts.c  fcfs_opts.h  ops.h  test_dir.sh  utils.c  utils.h
fcfs/cache/: cache.c  file_id.c  file_seq.c
fcfs/dev/: cache.h  common.c  ctable.c  dir.c  file.c  mount.c  read.c  table.c  write.c  write_structs.c
fcfs/ops/: cache.c  cache.h  chown.c  common.c  common.h  create.c  flush.c  getattr.c  main.c  mkdir.c  open.c  opendir.c  read.c  readdir.c  release.c  rmdir.c  truncate.c  unlink.c  utimens.c  write.c
fcfs/src/: cache.h  dev.h  fcfs.c  ops.h
fcfs/src/cache/: cache.c  file_id.c  file_seq.c
fcfs/src/dev/: cache.h  common.c  ctable.c  dir.c  file.c  unmount.c
fcfs/src/ops/: common.h  getattr.c  main.c  read.c  releasedir.c  rmdir.c  unlink.c  write.c
fmtr/: CMakeLists.txt  fcfsfmt.c
include/: debug.h  fcfs_structs.h  scsi.h
lib/: CMakeLists.txt  scsi.c  utils.c
